# Diba

./: .coveragerc  .gitattributes  .gitignore  MANIFEST.in  README.md  _set_ayanamsa_calls.txt  agent.md  diba_architecture_options_from_chart_engines.md  pyproject.toml  pyrightconfig.json  setup.cfg  sweep_2_architecture_coupling_contract_map.md
architecture/: core_computation_blueprint.v0.md
architecture/decisions/: D01_dst_fold_gap_policy.md  D02_time_bundle_canonicalization.md  D03_swisseph_state_isolation.md  D04_varga_dispatch_and_composition.md  D05_graha_pipeline_contract.md
diba/: __init__.py  cli.py  fetch_geonames.py  time_contract.py  utilities.py
diba/_cli/: __init__.py  app.py  options.py  output.py  prompting.py
diba/api/: __init__.py  chart.py  compatibility.py  compute.py  dasha.py  panchanga.py  transit.py
diba/chart/: __init__.py  service.py
diba/compatibility/: __init__.py  ashtakoota.py  service.py  south_porutham.py
diba/core/: __init__.py  angles.py  contracts.py  indexing.py  time.py
diba/dasha/: __init__.py  applicability.py  service.py  sudarshana.py
diba/engine/: __init__.py  engine.py  state.py
diba/experimental/: __init__.py
diba/infra/: __init__.py
diba/kr_types/: __init__.py  chart_template_model.py  diba_exception.py  kr_literals.py  kr_models.py  settings_models.py
diba/panchanga/: __init__.py  service.py
diba/schemas/: __init__.py  diba_exception.py  kr_literals.py  kr_models.py  settings_models.py
diba/serializers/: __init__.py  api_v1.py  static_chart_v0_1.py
diba/settings/: __init__.py  chart_defaults.py  config_constants.py  diba_settings.py  translation_strings.py
diba/transit/: __init__.py  saham.py  service.py  (+2 more)
docs/: README.md  docstrings_style.md  jhora_parity_compat_mode.md  jhora_parity_d10_d11_d12_d16_d20.md  jhora_parity_d24.md  jhora_parity_d4_d5_d6.md  jhora_parity_d60.md  jhora_parity_d7.md  jhora_parity_d7_d8_d9.md  jhora_parity_d7_rule.md  jhora_parity_d81_d108_d144.md  kerykeion_arch_audit.md  pyjhora_parity_d81.md  repo_vedic_equivalency_map.md  roadmap_natal_kerykeion_style.md  vargas_d10_d11_d12_d16_d20_research.md  vargas_d24_d27_d30_d40_d45_research.md  vargas_d4_d5_d6_research.md  vargas_d60_research.md  vargas_d7_d8_d9_mismatch_report.md  vargas_d7_d8_d9_research.md  vargas_d81_d108_d144_research.md
examples/: aspects_synastry.py  composite_report_example.py  context_serializer_example.py  current_time_report.py  dual_return_report_example.py  house_comparison_context_example.py  natal_report_example.py  planetary_return.py  quickstart_natal_chart.py  solar_return_report_example.py  subject_report_example.py  synastry_data_example.py  synastry_report_example.py  transit_report_example.py  transits_time_range.py
kerykeion/: __init__.py  cli.py  time_contract.py
project_memory/: CURRENT_STATUS.md  EXECUTION_ROADMAP.md  NEXT_STEPS.md  POLICIES.md  README.md  RUNTIME_CONTRACTS.md  WORKLOG.md
research/: INDEX.md  MASTER_CHECKLIST.md  README_coverage_pyjhora.md  chart_engines_local_inventory.md
schemas/: static_chart.v0.1.json
scripts/: check_documentation_coverage.py  diagnose_static_goldens.py  quality_check.py  regenerate_all.py  regenerate_expected_aspects.py  regenerate_expected_subjects.py  regenerate_synastry_aspects.py  regenerate_synastry_from_test.py  regenerate_test_charts.py  regenerate_test_charts_extended.py  regenerate_test_output.py  test_markdown_snippets.py  update_goldens.py
tests/: conftest.py  test_ayanamsa_codegen_sync.py  test_ayanamsa_disabled_modes.py  test_ayanamsa_registry_contract.py  test_ayanamsa_restore_contract.py  test_ayanamsa_runtime_wiring.py  test_ayanamsa_single_resolve_rule.py  test_cli_bench.py  test_cli_vedic_d1.py  test_config_surface_pyjhora_parity.py  test_core_angles.py  test_core_indexing.py  test_engine_ephemeris_wiring.py  test_engine_state.py  test_engine_thread_session_isolation.py  test_ephemeris_policy.py  test_ephemeris_runtime_contract.py  test_memory_sync_contract.py  test_natal_guard_no_scripts_runtime_import.py  test_natal_guard_no_self_fulfilling_golden.py  test_policy_research_gate.py  test_pyjhora_ayanamsa_coverage_contract.py  test_research_mirror_pointer_headers.py  test_session_ownership_contract.py  test_swisseph_session_guard.py  test_tolerance_profile_contract.py  test_vedic_context.py  test_vedic_contract.py  test_vedic_factory_no_io.py  test_vedic_factory_smoke.py  test_vedic_factory_validation.py  test_vedic_fetchplan_enforcement.py  test_vedic_no_legacy_payload_usage.py  test_vedic_no_swe_outside_context.py  test_vedic_vargas.py  test_vedic_vargas_parity_jhora.py  test_vedic_vargas_pyjhora_d7.py  test_vedic_vargas_pyjhora_d81.py
tools/: gen_ayanamsa_enum.py
(+222 files in other folders)
