[project]
name = "diba"
version = "5.7.0"
authors = [
    { name = "Diba Team", email = "diba.astrology@gmail.com" }
]
description = "Vedic astrology computation core built on Swiss Ephemeris."
license = { text = "AGPL-3.0" }
readme = "README.md"
keywords = [
    "vedic astrology",
    "jyotish",
    "swisseph",
    "ephemeris",
    "sidereal"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    "pyswisseph>=2.10.3.1",
    "pydantic>=2.5",
    "pytz>=2024.2",
    "typing-extensions>=4.12.2",
]

[project.urls]
Homepage = "https://www.diba.net/"
Repository = "https://github.com/g-battaglia/diba"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["diba"]

[tool.hatch.build.targets.sdist]
include = [
    "/diba",
    "/README.md",
    "/pyproject.toml",
    "/MANIFEST.in",
]

[tool.mypy]
ignore_missing_imports = true
mypy_path = "diba"
files = "diba"

[tool.pytest.ini_options]
log_cli_level = 20
log_cli = true
testpaths = "tests"
log_level = 20
log_date_format = "%Y-%m-%d %H:%M:%S"
log_format = "%(asctime)s %(levelname)s %(message)s"
addopts = ""

[tool.coverage.run]
source = ["diba"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/sweph/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
skip_covered = false
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.poe.tasks]
test = "pytest"
"test:cov" = "pytest --cov=diba --cov-config=pyproject.toml --cov-report=html --cov-report=term --cov-report=xml"
lint = "ruff check"
format = "ruff format"
"format:all" = "ruff format diba tests"
analyze = "mypy"
typecheck = "pyright"
clean = "python -c \"import shutil, pathlib; [shutil.rmtree(p, ignore_errors=True) for p in ['dist','build','htmlcov','.pytest_cache','.mypy_cache','.ruff_cache']]; [pathlib.Path(f).unlink(missing_ok=True) for f in ['.coverage','coverage.xml']]\""

[tool.poe.tasks.check]
sequence = ["lint", "analyze", "typecheck", "test"]
help = "Run lint, mypy, pyright, and tests."

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "W", "I", "TID"]
extend-select = ["D"]
ignore = ["E402", "E501", "E731", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"
ignore-decorators = ["typing.overload", "typing_extensions.overload"]
ignore-var-parameters = true

[tool.ruff.lint.per-file-ignores]
"diba/settings/__init__.py" = ["F401", "F403"]
"diba/schemas/__init__.py" = ["F401", "F403"]
"diba/infra/swisseph/session.py" = ["TID251"]
"tests/**/*.py" = ["D"]
"diba/experimental/**/*.py" = ["D"]
"**/__init__.py" = ["D104"]
"diba/schemas/**/*.py" = ["D"]
"diba/vedic/**/*.py" = ["D"]
"diba/__init__.py" = ["D"]
"diba/cli.py" = ["D"]
"diba/settings/**/*.py" = ["D"]
"diba/utilities.py" = ["D"]
"diba/time_contract.py" = ["D"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"swisseph" = { msg = "Direct swisseph import is forbidden. Use VedicCalculationContext/SwissEph adapter path." }

[tool.pyright]
include = ["diba"]
exclude = [
    "tests",
    "workspace",
    "**/__pycache__",
    ".venv",
    "dist",
    "build",
    "*.egg-info"
]
typeCheckingMode = "basic"
pythonVersion = "3.9"
pythonPlatform = "All"
venvPath = "."
venv = ".venv"
reportOptionalMemberAccess = "none"
reportIncompatibleVariableOverride = "none"
reportArgumentType = "none"
reportInvalidTypeForm = "error"
reportAttributeAccessIssue = "error"
reportGeneralTypeIssues = "none"

[dependency-groups]
dev = [
    "coverage>=7.6.0",
    "mypy>=1.17.1",
    "pdoc>=15.0.4",
    "poethepoet>=0.36.0",
    "pyright>=1.1.408",
    "pytest>=8.4.1",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.12.9",
    "types-pytz>=2025.2.0.20250516",
]
